--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "author": "Jooho7133",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/node": "^7.13.0",
+    "@babel/preset-env": "^7.13.9",
+    "core-js": "^3.9.1",
     "express": "^4.17.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon --exec babel-node index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
