--- a/package.json
+++ b/package.json
@@ -17,18 +17,33 @@
     "mongoose": "^5.12.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "webpack": "^5.30.0",
+    "webpack-cli": "^4.6.0"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js"
+    "dev:server": "nodemon --exec babel-node init.js",
+    "dev:assets": "cross-env EBPACK_ENV=development webpack --mode=development",
+    "build:assets": "cross-env WEBPACK_ENV=production webpack --mode=production"
   },
   "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.0",
     "eslint": "^7.23.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "mini-css-extract-plugin": "^1.4.0",
+    "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1"
-  }
+    "postcss": "^8.2.9",
+    "postcss-loader": "^5.2.0",
+    "prettier": "^2.2.1",
+    "sass-loader": "^11.0.1"
+  },
+  "browserslist": [
+    "cover 99.5%"
+  ]
 }
