--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@babel/core": "^7.13.8",
     "@babel/node": "^7.13.0",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.9",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -23,11 +24,12 @@
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js",
-    "dev:assets": "cross-env EBPACK_ENV=development webpack --mode=development",
+    "dev:assets": "cross-env EBPACK_ENV=development webpack --mode=development -w",
     "build:assets": "cross-env WEBPACK_ENV=production webpack --mode=production"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.0",
     "eslint": "^7.23.0",
