--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.9",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
     "core-js": "^3.9.1",
     "dotenv": "^8.2.0",
